--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,23 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-sqlalchemy==2.0.25
+fastapi==0.115.6
+uvicorn==0.38.0
+sqlalchemy==2.0.44
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+python-dotenv==1.2.1
+pydantic==2.12.5
+pydantic-settings==2.12.0
 alembic==1.13.1
+langchain==1.1.2
+langchain-core==1.1.1
+langchain-groq==1.1.0
+langchain-community==0.4.1
+langchain-text-splitters==1.0.0
+langgraph==1.0.4
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.2.12
+langsmith==0.4.55
+tavily-python
+apscheduler
