--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,10 @@ fastapi==0.115.6
 uvicorn==0.38.0
 sqlalchemy==2.0.44
 psycopg2-binary==2.9.9
+psycopg[binary]
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 python-multipart==0.0.6
 python-dotenv==1.2.1
 pydantic==2.12.5
